completed desktop version;

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Stact Landing Page</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -47,7 +54,7 @@
 						It's where players can go to review live stats, or watch a live
 						stream. It's where the community is.
 					</p>
-					<div class="download">
+					<div class="store">
 						<img src="./images/google-play.svg" alt="play store" />
 						<img src="./images/app-store.svg" alt="app store" />
 					</div>
@@ -208,8 +215,8 @@
 				</div>
 			</div>
 		</section>
-		<div class="container">
-			<section class="uniqu">
+		<section class="container">
+			<div class="uniqu">
 				<h1>Extremely smooth workflow with cosistancy</h1>
 
 				<div class="unique-content">
@@ -283,8 +290,172 @@
 						</p>
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
+
+		<section class="reviews">
+			<div class="container">
+				<div class="review-top">
+					<p class="review-top-bar">Customer Review</p>
+					<div class="review-top-heading">
+						<h1>
+							Adopted by the most<br />
+							creative individuals
+						</h1>
+						<button>
+							See all reviews
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								class="h-6 w-6"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke="currentColor"
+								stroke-width="2"
+							>
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									d="M13 7l5 5m0 0l-5 5m5-5H6"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="review-cards">
+					<div class="card">
+						<div class="card-title">
+							<img src="./images/card-1.svg" alt="" />
+						</div>
+						<div class="card-body">
+							<p>
+								&ldquo;Love the product and the service, and the customer care
+								team is awesome. The features are great, too--everything that
+								you need. &rdquo;
+							</p>
+						</div>
+						<div class="card-footer">
+							<img src="./images/rev-1.svg" alt="" />
+							<div class="card-footer-person">
+								<h4>Mc Hamouda</h4>
+								<h5>Web Developer</h5>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-title">
+							<img src="./images/card-2.svg" alt="" />
+						</div>
+						<div class="card-body">
+							<p>
+								&ldquo;I recommend this product because it benefits everyone.
+								You will be able to stay connected with your team and clients
+								from all over the world. &rdquo;
+							</p>
+						</div>
+						<div class="card-footer">
+							<img src="./images/rev-2.svg" alt="" />
+							<div class="card-footer-person">
+								<h4>Abdullahi Abas</h4>
+								<h5>Open Sourcer</h5>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-title">
+							<img src="./images/card-3.svg" alt="" />
+						</div>
+						<div class="card-body">
+							<p>
+								&ldquo;I was able to get a fully functional online office space
+								that included all the software we needed and it was super cheap!
+								&rdquo;
+							</p>
+						</div>
+						<div class="card-footer">
+							<img src="./images/rev-3.svg" alt="" />
+							<div class="card-footer-person">
+								<h4>Ismail Jamal</h4>
+								<h5>Advocate Developer</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<div class="download">
+			<div class="container-sm download-content">
+				<div class="left item">
+					<h1>10 million people all around the world love it</h1>
+					<p>
+						Stact is designed with e-sports in mind because that's where we come
+						from.
+					</p>
+					<div class="store">
+						<img src="./images/google-play.svg" alt="play store" />
+						<img src="./images/app-store.svg" alt="app store" />
+					</div>
+				</div>
+				<div class="right item">
+					<img src="/images/col-3.png" alt="" />
+				</div>
+			</div>
 		</div>
+
+		<footer>
+			<div class="container grid">
+				<img src="./images/logo.svg" alt="" />
+				<div class="col">
+					<h4>Links</h4>
+					<ul>
+						<li>Home</li>
+						<li>Pricing</li>
+						<li>FAQs</li>
+						<li>Services</li>
+						<li>Contact</li>
+						<li>Block</li>
+					</ul>
+				</div>
+				<div class="col">
+					<h4>Company</h4>
+					<ul>
+						<li>About Us</li>
+						<li>Projects</li>
+						<li>Block</li>
+						<li>Contact</li>
+					</ul>
+				</div>
+				<div class="col">
+					<h4>Legal</h4>
+					<ul>
+						<li>Privacy</li>
+						<li>Terms Of Use</li>
+					</ul>
+				</div>
+				<div class="col contact">
+					<div>
+						<span>Email:</span>
+						<a href="mailto:info@dugsiiye.so">info@dugsiiye.so</a>
+					</div>
+					<div>
+						<span>Inquiries:</span>
+						<a href=":tel">+252 615 2525251</a>
+					</div>
+					<div class="social-media">
+						<h4>Follow us on</h4>
+						<div class="items">
+							<i class="fa-brands fa-instagram"></i>
+							<i class="fa-brands fa-facebook"></i>
+							<i class="fa-brands fa-twitter"></i>
+							<i class="fa-brands fa-linkedin"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="line"></div>
+			<p class="copy">Copyright &copy; 2021 Dugsiiye inc</p>
+		</footer>
 		<script src="./main.js"></script>
 	</body>
 </html>
